<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Titles -->
    <string name="title_activity_profilelist">ProfilelistActivity</string>
    <string name="title_activity_update_profile">UpdateProfile</string>
    <string name="title_activity_visitor_profile">VisitorProfile</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_user_sign_up">UserSignUpActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_log_out">Logout</string>
    <string name="title_activity_person">Person</string>
    <string name="title_activity_refresh">Refresh</string>
    <string name="title_activity_settings">Settings</string>
    <!-- ******************************************************** -->


    <!-- Home screen -->
    <string name="app_name" translatable="false">Metster</string>
    <!-- ******************************************************** -->


    <!-- Sign Up -->

    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Email">Email</string>
    <string name="ContactNumber">Contact Number</string>
    <!-- ******************************************************** -->


    <!-- My Profile Home -->

    <string name="Name">Name</string>
    <string name="StudentType">Graduate</string>
    <string name="Major">Major</string>
    <string name="Gender">M</string>
    <string name="CurrentLocation">Location</string>
    <string name="CurrentCounty">County</string>
    <string name="CurrentCountry">Country</string>
    <string name="updateprofile">update profile</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="linner">Linner</string>
    <string name="dinner">Dinner</string>

    <!-- ******************************************************** -->


    <!-- Update Profile -->

    <string name="Update">Submit</string> <!-- Button Update -->
    <string name="facebook_app_id">1500888230193192</string>
    <!-- ******************************************************** -->


    <!-- View Students Profile -->

    <string name="ViewProfile">View Profile</string>
    <string name="Next">Next</string>
    <string name="Previous">Previous</string>

    <!-- ******************************************************** -->


    <!-- Settings -->

    <string name="ProfileSettings">Profile Settings</string>
    <string name="AboutMetster">About Metster</string>
    <string name="Support">Support</string>
    <string name="Privacy">Privacy</string>
    <string name="FAQ">FAQ</string>
    <string name="Logout">Logout</string>
    <string name="DeleteAccount">Delete Account</string>

    <!-- ******************************************************** -->


    <!-- ******************************************************** -->


    <!-- Others -->

    <string name="action_settings">Settings</string>
    <string name="hello_world">Metster</string>
    <string name="desc">User Image</string>

    <!-- ******************************************************** -->
    <string name="new_event">Do you want to setup a new event?</string>
    <string name="event_name"> My Events </string>
    <string name="event_chat"> Chat </string>
    <string name="event_type"> Food</string>
    <string name="event_date"> Pick a Date</string>
    <string name="start_time">Pick start time</string>
    <string name="end_time">Pick end time</string>
    <string name="setup_preferences">Event Preferences</string>
    <string name="Price_Level">Select your price level</string>
    <string name="Travel_Method">How are you planning to travel?</string>
    <string name="Travel_car">Car</string>
    <string name="Travel_public">bus/tram</string>
    <string name="Travel_bike">Bike</string>
    <string name="Travel_walk">Walk</string>
    <string name="Time_to_meet_start">Preferred start time</string>
    <string name="Time_to_meet_end">Preferred end time</string>
    <!-- ******************************************************** -->

    <string name="title_activity_profiles">Profiles</string>
    <string name="title_activity_load_home">LoadHome</string>
    <string name="dummy_button">Accept</string>
    <string name="dummy_content">METSTER</string>
    <string name="title_activity_profession_info">Profession_info</string>
    <string name="title_activity_loading_screen">Loading_screen</string>
    <string name="title_activity_upload__image">Upload_Image</string>
    <string name="title_activity_rend">Rend</string>
    <string name="title_activity_meet_up">MeetUp</string>
    <string name="title_activity_load_home1">LoadHome1</string>
    <string name="title_activity_view_places">ViewPlaces</string>
    <string name="title_activity_centra_dash">CentraDash</string>
    <string name="title_activity_discard">Delete event</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_getlocation">Getlocation</string>
    <string name="title_activity_gcm_handle">GCM_handle</string>
    <string name="title_activity_accept_invite">Accept_invite</string>
    <string name="plan">What`s the plan?</string>
    <string name="facebookpost">*We do not post anything on facebook.</string>
    <string name="infonext">Next</string>
    <string name="exit">Do you want to exit?</string>

    
    <!-- ****************************************************** -->
    <string name="thirty_min">30min</string>
    <string name="one_hr">1hr</string>
    <string name="two_hr">2hr</string>
    <string name="three_hr">3hr</string>
    <string name="three_plus_hr">3+ hr</string>
    
    <!-- ****************************************************** -->

    <string name="profile_settings"> Profile Settings </string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_chatlayer">Chatlayer</string>
    <string name="custom_new_event_title">New Event.</string>
    <string name="custom_new_event_title_hint">Give this event name.</string>

    <!-- ****** choices -->

    <string-array name="choiceList">
        <item>Asian</item>
        <item>American</item>
        <item>Asian fusion</item>
        <item>Bar</item>
        <item>Breakfast</item>
        <item>Brunch</item>
        <item>Chinese</item>
        <item>Coffee</item>
        <item>Breakfast</item>
        <item>Donuts</item>
        <item>Fast food</item>
        <item>Hookah</item>
        <item>Italian</item>
        <item>Indian</item>
        <item>Ice cream</item>
        <item>Japanese</item>
        <item>Juice</item>
        <item>Korean</item>
        <item>Lebanese</item>
        <item>Mexican</item>
        <item>Mediterranean</item>
        <item>Pizza</item>
        <item>Pho</item>
        <item>Sushi</item>
        <item>Sea Food</item>
        <item>Steak</item>
        <item>Thai</item>
        <item>Vietnamese</item>
        <item>Yogurt</item>
    </string-array>

    <string name="title_activity_panel">Panel</string>
    <string name="title_activity_viewhold">Viewhold</string>
    <string name="title_activity_view_pager_style1">ViewPagerStyle1Activity</string>

</resources>
