<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android1="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android2="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_event_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/New_Event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/setup_preferences"
        android:paddingBottom="10dp"
        android:textColor="#2E2E2E"
        android:textSize="28sp" />

    <View
        android:id="@+id/Dividerevent"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:paddingTop="20dp"
        android:layout_below="@+id/New_Event"
        android:background="#819FF7"
        android:gravity="bottom" />

    <EditText
        android2:id="@+id/event_name"
        android2:layout_width="wrap_content"
        android2:layout_height="wrap_content"
        android2:layout_alignParentLeft="true"
        android2:layout_below="@+id/Dividerevent"
        android2:layout_marginLeft="25dp"
        android2:inputType = "text"
        android2:hint  = "@string/event_name"
        android2:ems="10" />
   
    <TextView
        android:id="@+id/Time_to_meet_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_name"
        android:gravity="top"
        android:paddingTop="20dp"
        android:text="@string/Time_to_meet_start"
        android:textColor="#424242"
        android:textSize="16sp" />

    <TimePicker
        android:id="@+id/timePickerstart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Time_to_meet_start">
        <requestFocus />
    </TimePicker>
    
   <TextView
        android:id="@+id/Time_to_meet_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timePickerstart"
        android:gravity="top"
        android:paddingTop="20dp"
        android:text="@string/Time_to_meet_end"
        android:textColor="#424242"
        android:textSize="16sp" />

    <TimePicker
        android:id="@+id/timePickerend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Time_to_meet_end">
        <requestFocus />
    </TimePicker>



</RelativeLayout>