<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    tools:context=".ProfilelistActivity" >
    
    
    <!--  ******************************************************************  User Basic Profile data -->

    <LinearLayout
        android:id="@+id/Profiledata"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#424242"
        android:gravity="top"
        android:orientation="horizontal" >
        
        <Button
	        android:id="@+id/visitorbuttonprev"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="0dip"
			android:layout_weight="1"
			android:gravity="center"
			android:paddingTop="50dip"
	        android:layout_height="match_parent"
	        android:background = "@drawable/buttonhandler"
	        android:drawableTop="@drawable/ic_action_previous_item"
	        android:textColor="#F2F2F2"
	        android:textSize="12sp"
	        android:textStyle="bold" />
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#424242"
            android:paddingLeft="5dp"
            android:layout_weight="0.08"
            android:orientation="vertical" >
               
        <ImageButton
            android:id="@+id/ImagevisitorView01"
            android:layout_width="150dp"
			android:layout_height="140dp"
			android:src="@drawable/defaultprofile"
			android:background = "@drawable/loginbg"
			android:scaleType="centerCrop"
            android:contentDescription="@string/desc" 
            android:onClick="load_profile"/>
        </LinearLayout>
                

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
			android:paddingTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/FirstName"
                android:textColor="#58D3F7"
                android:textSize="20sp"
                android:text="@string/Name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/LastName"
                android:textColor="#58D3F7"
                android:textSize="20sp"
                android:text="@string/Name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

             <TextView
                android:id="@+id/Profession"
                android:textColor="#F2F2F2"
                android:textSize="12sp"
                android:text="@string/StudentType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/Worksat"
                android:textColor="#F2F2F2"
                android:textSize="12sp"
                android:text="@string/Major"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/CurrentCity"
                android:textColor="#F2F2F2"
                android:textSize="12sp"
                android:text="@string/Gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            
        </LinearLayout>
        
        <Button
	        android:id="@+id/visitorbuttonnext"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="0dip"
			android:layout_weight="1"
			android:gravity="center"
			android:paddingTop="50dip"
	        android:layout_height="match_parent"
	        android:background = "@drawable/buttonhandler"
	        android:drawableTop="@drawable/ic_action_next_item"
	        android:textColor="#F2F2F2"
	        android:textSize="12sp"
	        android:textStyle="bold" />
         
    </LinearLayout>
    
    <!--  ******************************************************************  User Basic Profile data -->
    
    <!-- ******************************************************************* Map region               -->
    <LinearLayout
        android:id="@+id/MapsRegion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Profiledata"
        android:gravity="center"
        android:orientation="vertical" >
    <fragment 
          android:id="@+id/visitormap"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:name="com.google.android.gms.maps.MapFragment"/>
	</LinearLayout>
	<!-- ******************************************************************* Map region               --> 
	
	    

</RelativeLayout>

